// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavbarToggler should render correctly 1`] = `
.c1 {
  fill: #990000;
  cursor: default;
}

.c1:hover {
  fill: #990000;
}

.c0 {
  fill: #FFFFFF;
}

.c0:hover {
  fill: #FFFFFF;
}

@media (min-width:48rem) {
  .c0 {
    display: none;
  }
}

<NavbarToggler
  onToggle={[MockFunction]}
  selectable={false}
  toggled={false}
>
  <Styled(FasBars)
    onToggle={[MockFunction]}
    selectable={false}
    size="20px"
  >
    <StyledComponent
      forwardedClass={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-clpBeH",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "
  fill: ",
              [Function],
              ";

  &:hover {
    fill: ",
              [Function],
              ";
  }

  @media (min-width: ",
              [Function],
              ") {
    display: none;
  }
",
            ],
          },
          "displayName": "Styled(FasBars)",
          "render": [Function],
          "styledComponentId": "sc-clpBeH",
          "target": [Function],
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
          Symbol(Symbol.hasInstance): [Function],
        }
      }
      forwardedRef={null}
      onToggle={[MockFunction]}
      selectable={false}
      size="20px"
    >
      <FasBars
        className="c0"
        onToggle={[MockFunction]}
        selectable={false}
        size="20px"
      >
        <Styled(SvgFasBars)
          className="c0"
          height="20px"
          onToggle={[MockFunction]}
          selectable={0}
          width="20px"
        >
          <StyledComponent
            className="c0"
            forwardedClass={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-gwZsXD",
                  "isStatic": false,
                  "lastClassName": "c1",
                  "rules": Array [
                    "
    ",
                    "
  fill: ",
                    [Function],
                    ";
  cursor: ",
                    [Function],
                    ";

  &:hover {
    fill: ",
                    [Function],
                    ";
  }
",
                    ";
  ",
                  ],
                },
                "displayName": "Styled(SvgFasBars)",
                "render": [Function],
                "styledComponentId": "sc-gwZsXD",
                "target": [Function],
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
                Symbol(Symbol.hasInstance): [Function],
              }
            }
            forwardedRef={null}
            height="20px"
            onToggle={[MockFunction]}
            selectable={0}
            width="20px"
          >
            <SvgFasBars
              className="c0 c1"
              height="20px"
              onToggle={[MockFunction]}
              selectable={0}
              width="20px"
            >
              <svg
                className="c0 c1"
                height="20px"
                onToggle={[MockFunction]}
                selectable={0}
                viewBox="0 0 448 512"
                width="20px"
              >
                <path
                  d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
                />
              </svg>
            </SvgFasBars>
          </StyledComponent>
        </Styled(SvgFasBars)>
      </FasBars>
    </StyledComponent>
  </Styled(FasBars)>
</NavbarToggler>
`;

exports[`NavbarToggler should render correctly with toggled 1`] = `
.c1 {
  fill: #990000;
  cursor: default;
}

.c1:hover {
  fill: #990000;
}

.c0 {
  fill: #FFFFFF;
  z-index: 100;
}

.c0:hover {
  fill: #FFFFFF;
}

@media (min-width:48rem) {
  .c0 {
    display: none;
  }
}

<NavbarToggler
  onToggle={[MockFunction]}
  selectable={false}
  toggled={true}
>
  <Styled(FasTimes)
    onToggle={[MockFunction]}
    selectable={false}
    size="20px"
  >
    <StyledComponent
      forwardedClass={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-jgZNlG",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "
  fill: ",
              [Function],
              ";
  z-index: ",
              [Function],
              ";

  &:hover {
    fill: ",
              [Function],
              ";
  }

  @media (min-width: ",
              [Function],
              ") {
    display: none;
  }
",
            ],
          },
          "displayName": "Styled(FasTimes)",
          "render": [Function],
          "styledComponentId": "sc-jgZNlG",
          "target": [Function],
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
          Symbol(Symbol.hasInstance): [Function],
        }
      }
      forwardedRef={null}
      onToggle={[MockFunction]}
      selectable={false}
      size="20px"
    >
      <FasTimes
        className="c0"
        onToggle={[MockFunction]}
        selectable={false}
        size="20px"
      >
        <Styled(SvgFasTimes)
          className="c0"
          height="20px"
          onToggle={[MockFunction]}
          selectable={0}
          width="20px"
        >
          <StyledComponent
            className="c0"
            forwardedClass={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-hzBeZU",
                  "isStatic": false,
                  "lastClassName": "c1",
                  "rules": Array [
                    "
    ",
                    "
  fill: ",
                    [Function],
                    ";
  cursor: ",
                    [Function],
                    ";

  &:hover {
    fill: ",
                    [Function],
                    ";
  }
",
                    ";
  ",
                  ],
                },
                "displayName": "Styled(SvgFasTimes)",
                "render": [Function],
                "styledComponentId": "sc-hzBeZU",
                "target": [Function],
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
                Symbol(Symbol.hasInstance): [Function],
              }
            }
            forwardedRef={null}
            height="20px"
            onToggle={[MockFunction]}
            selectable={0}
            width="20px"
          >
            <SvgFasTimes
              className="c0 c1"
              height="20px"
              onToggle={[MockFunction]}
              selectable={0}
              width="20px"
            >
              <svg
                className="c0 c1"
                height="20px"
                onToggle={[MockFunction]}
                selectable={0}
                viewBox="0 0 352 512"
                width="20px"
              >
                <path
                  d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                />
              </svg>
            </SvgFasTimes>
          </StyledComponent>
        </Styled(SvgFasTimes)>
      </FasTimes>
    </StyledComponent>
  </Styled(FasTimes)>
</NavbarToggler>
`;
